modificações na página da equipe

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>menstRua.</title>
+    <title>menstRUA.</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon-menstrua.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
